// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button slice should correctly render UIButton 1`] = `
<div>
  <div
    class="button-slice"
    style="background-color: rgb(17, 18, 19);"
  >
    <div
      class="container button-slice__content--align-center aos-init aos-animate"
      data-aos="fade-up"
      data-testid="button-slice-container"
    >
      <lazyhydrate-stub
        idletimeout="2000"
        whenvisible="true"
      >
        <uibutton-stub
          class="button-slice__button button-slice__button--normal"
          data-testid="button-ui"
          is-link=""
          target="_self"
          to="url"
        >
          
        
      
        </uibutton-stub>
      </lazyhydrate-stub>
    </div>
  </div>
</div>
`;

exports[`Button slice should correctly render UILinkButton 1`] = `
<div>
  <div
    class="button-slice"
    style="background-color: rgb(17, 18, 19);"
  >
    <div
      class="container button-slice__content--align-center aos-init aos-animate"
      data-aos="fade-up"
      data-testid="button-slice-container"
    >
      <lazyhydrate-stub
        idletimeout="2000"
        whenvisible="true"
      >
        <uilinkbutton-stub
          class="button-slice__button button-slice__button--link"
          data-testid="button-link"
          is-link=""
          target="_self"
          to="url"
        >
          
        
      
        </uilinkbutton-stub>
      </lazyhydrate-stub>
    </div>
  </div>
</div>
`;

exports[`Button slice should correctly render UIOutlinedButton 1`] = `
<div>
  <div
    class="button-slice"
    style="background-color: rgb(17, 18, 19);"
  >
    <div
      class="container button-slice__content--align-center aos-init aos-animate"
      data-aos="fade-up"
      data-testid="button-slice-container"
    >
      <lazyhydrate-stub
        idletimeout="2000"
        whenvisible="true"
      >
        <uioutlinedbutton-stub
          class="button-slice__button button-slice__button--outlined"
          data-testid="button-outline"
          is-link=""
          target="_self"
          to="url"
        >
          
        
      
        </uioutlinedbutton-stub>
      </lazyhydrate-stub>
    </div>
  </div>
</div>
`;
